apps/rss/environments/manifest.yaml
---
# Source: homelab/charts/rss/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-homelab
  labels:
    helm.sh/chart: rss-0.0.12
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss-homelab
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss-homelab
---
# Source: homelab/charts/rss/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-homelab
  labels:
    helm.sh/chart: rss-0.0.12
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss-homelab
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rss
      app.kubernetes.io/instance: rss-homelab
  template:
    metadata:
      labels:
        helm.sh/chart: rss-0.0.12
        app.kubernetes.io/name: rss
        app.kubernetes.io/instance: rss-homelab
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: rss-homelab
      securityContext:
        {}
      containers:
        - name: rss
          image: "freshrss/freshrss:1.27.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: pvc-freshrss-data-pvc
              readOnly: false
      volumes:
        - name: pvc-freshrss-data-pvc
          persistentVolumeClaim:
            claimName: freshrss-data-pvc
---
# Source: homelab/charts/rss/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss-homelab
  labels:
    helm.sh/chart: rss-0.0.12
    app.kubernetes.io/name: rss
    app.kubernetes.io/instance: rss-homelab
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "rss.int.kyledev.co"
    - "rss.ts.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: rss-homelab
        port: 80
